fix user profile photo overflow from nav

--- a/server/public/assets/styles/style.css
+++ b/server/public/assets/styles/style.css
@@ -1462,6 +1462,7 @@ box-shadow: 0 9px #999;
 .post-profile-picture {
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   padding: 0px !important;
+  height: 50px !important;
   border-radius: 2px;
   margin-left: 20px;
 
